Add search endpoint companies
